<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/selamat_datang"/>

            <ImageView
                android:layout_width="120dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:src="@drawable/logo"
                android:contentDescription="@string/todo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/silahkan"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <EditText
                    android:id="@+id/tvUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:hint="@string/username"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textSize="12sp"
                    tools:ignore="SpeakableTextPresentCheck"
                    android:importantForAutofill="no" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <EditText
                    android:id="@+id/tvPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textSize="12sp"
                    tools:ignore="SpeakableTextPresentCheck"
                    android:importantForAutofill="no" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnLogin"
                    android:layout_width="250dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:background="@drawable/btn_login"
                    android:text="@string/login"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textSize="10sp"
                    android:text="@string/login_ket"
                    tools:ignore="SmallSp" />
                <ImageButton
                    android:id="@+id/btnRegist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:background="@color/white"
                    android:src="@drawable/baseline_app_registration"
                    tools:ignore="TouchTargetSizeCheck"
                    android:contentDescription="@string/todo" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="170dp"
                    android:text="@string/version"
                    android:textAlignment="center"
                    android:textSize="10sp"
                    tools:ignore="SmallSp,TextSizeCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="350dp"
                android:visibility="gone" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>